--- a/PROJECTS/Aenebris/.gitignore
+++ b/PROJECTS/Aenebris/.gitignore
@@ -1,8 +1,23 @@
-.stack-work
+# Haskell build artifacts
+.stack-work/
+dist/
+dist-newstyle/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
+
+# Editor files
 *.swp
 *.swo
 *~
 .DS_Store
+
+# Test certificates (self-signed, regenerate with script)
+examples/certs/
+
+# Logs
+*.log
 
 # Private progress tracking
 PROGRESS.md
