--- a/PROJECTS/Aenebris/aenebris.cabal
+++ b/PROJECTS/Aenebris/aenebris.cabal
@@ -19,9 +19,16 @@ library
   hs-source-dirs:      src
   exposed-modules:     Aenebris.Proxy
                      , Aenebris.Config
+                     , Aenebris.Backend
+                     , Aenebris.LoadBalancer
+                     , Aenebris.HealthCheck
+                     , Aenebris.TLS
+                     , Aenebris.Middleware.Security
+                     , Aenebris.Middleware.Redirect
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , warp >= 3.3
+                     , warp-tls >= 3.4
                      , wai >= 3.2
                      , http-types >= 0.12
                      , http-conduit >= 2.3
@@ -30,6 +37,18 @@ library
                      , text >= 2.0
                      , yaml >= 0.11
                      , aeson >= 2.0
+                     , async >= 2.2
+                     , stm >= 2.5
+                     , time >= 1.9
+                     , containers >= 0.6
+                     , vector >= 0.12
+                     , tls >= 2.1
+                     , x509 >= 1.7
+                     , x509-store >= 1.6
+                     , x509-validation >= 1.6
+                     , case-insensitive >= 1.2
+                     , directory >= 1.3
+                     , data-default-class >= 0.1
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
