chore: bump dns-lookup to v0.1.1, exclude docs from publish trigger

--- a/.github/workflows/publish-dns-lookup.yml
+++ b/.github/workflows/publish-dns-lookup.yml
@@ -11,6 +11,8 @@ on:
       - main
     paths:
       - 'PROJECTS/dns-lookup/**'
+      - '!PROJECTS/dns-lookup/README.md'
+      - '!PROJECTS/dns-lookup/justfile'
 
 permissions:
   contents: read
