--- a/PROJECTS/encrypted-p2p-chat/.env.example
+++ b/PROJECTS/encrypted-p2p-chat/.env.example
@@ -39,7 +39,7 @@ REDIS_URL=redis://redis:6379
 
 # WebAuthn / Passkeys
 RP_ID=localhost
-RP_NAME=Encrypted P2P Chat
+RP_NAME="Encrypted P2P Chat"
 RP_ORIGIN=http://localhost
 
 # Frontend (Vite requires VITE_ prefix)
@@ -48,7 +48,7 @@ VITE_WS_URL=ws://localhost:8000
 VITE_RP_ID=localhost
 
 # CORS
-CORS_ORIGINS=["http://localhost:3000","http://localhost:5173"]
+CORS_ORIGINS='["http://localhost:3000","http://localhost:5173"]'
 
 # WebSocket
 WS_HEARTBEAT_INTERVAL=30
