Fix api-rate-limiter PyPI publish workflow paths
- Update working-directory from PROJECTS/fastapi-420 to PROJECTS/advanced/api-rate-limiter
- Update packages-dir to match new project location
- Fixes workflow failure from missing directory

--- a/.github/workflows/publish-api-rate-limter.yml
+++ b/.github/workflows/publish-api-rate-limter.yml
@@ -39,10 +39,10 @@ jobs:
           pip install build
 
       - name: Build package
-        working-directory: PROJECTS/fastapi-420
+        working-directory: PROJECTS/advanced/api-rate-limiter
         run: python -m build
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: PROJECTS/fastapi-420/dist/
+          packages-dir: PROJECTS/advanced/api-rate-limiter/dist/
